# learning-CMake

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
app/: CMakelists.txt  main.cc
src/my_lib/: CMakelists.txt  my_lib.cc  my_lib.h
